[gd_scene load_steps=13 format=3 uid="uid://cmre6axngk475"]

[ext_resource type="Script" uid="uid://bvr24d8hxsvwg" path="res://scripts/intro_video.gd" id="1_8ofvi"]
[ext_resource type="VideoStream" uid="uid://ck0c587pkxdpj" path="res://assets/videos/Polutor_intro1.ogv" id="2_mgkwl"]
[ext_resource type="FontFile" uid="uid://c4pe7v7qaoxgf" path="res://assets/fonts/Comfortaa-Bold.ttf" id="3_mgkwl"]
[ext_resource type="PackedScene" uid="uid://ne1mtcf1gjyd" path="res://scenes/scene_transition_animation.tscn" id="4_iq608"]
[ext_resource type="AudioStream" uid="uid://q4qcy6jbpn6q" path="res://assets/musics/intro_music.mp3" id="4_s5nda"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ofvi"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_s5nda"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Intro_panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_iq608"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Intro_panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n0c45"]
_data = {
&"RESET": SubResource("Animation_s5nda"),
&"fade_in": SubResource("Animation_iq608")
}

[sub_resource type="Animation" id="Animation_hxvdu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_n0c45"]
resource_name = "fade_out_music"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -35.604]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_me3gu"]
_data = {
&"RESET": SubResource("Animation_hxvdu"),
&"fade_out_music": SubResource("Animation_n0c45")
}

[node name="Intro_video" type="Node2D"]
script = ExtResource("1_8ofvi")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
offset_right = 3200.0
offset_bottom = 1800.0
scale = Vector2(0.6, 0.6)
stream = ExtResource("2_mgkwl")
autoplay = true

[node name="Intro_panel" type="Panel" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
offset_right = 1920.0
offset_bottom = 1080.0
theme_override_styles/panel = SubResource("StyleBoxFlat_8ofvi")

[node name="Button" type="Button" parent="Intro_panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="Label" type="Label" parent="Intro_panel/Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -28.5
offset_right = 280.0
offset_bottom = 28.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_mgkwl")
theme_override_font_sizes/font_size = 20
text = "Appuyer sur l'Ã©cran pour commencer votre aventure..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Animation_text" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_n0c45")
}

[node name="Animation_audio" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_me3gu")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_s5nda")
bus = &"Music"

[node name="Scene_transition_animation" parent="." instance=ExtResource("4_iq608")]

[connection signal="pressed" from="Intro_panel/Button" to="." method="_on_button_pressed"]
